--- a/app/src/main/res/layout/activity_gender_select.xml
+++ b/app/src/main/res/layout/activity_gender_select.xml
@@ -1,6 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
 
-</LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/gender_select_text"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center">
+
+            <Button
+                android:id="@+id/btn_male"
+                style="@style/GenderButton"
+                android:background="@drawable/btn_male"
+                android:text="@string/male"/>
+
+            <Button
+                android:id="@+id/btn_female"
+                style="@style/GenderButton"
+                android:background="@drawable/btn_female"
+                android:text="@string/female"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
+</layout>
