クラス選択画面追加

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="lightskyblue">#87cefa</color>
     <color name="deepPink">#ff1493</color>
     <color name="hotPink">#ff69b4</color>
+    <color name="lime">#00ff00</color>
+    <color name="lawngreen">#7cfc00	</color>
 </resources>
