--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,6 +5,15 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="BaseFrame">
+       <item name="android:padding">4dp</item>
+    </style>
+
+    <style name="MessageTextView" parent="Base.TextAppearance.AppCompat">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="GenderButton">
         <item name="android:layout_width">100dp</item>
         <item name="android:layout_height">100dp</item>
@@ -12,6 +21,10 @@
         <item name="android:textColor">@android:color/white</item>
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
+    </style>
 
+    <style name="ClassSelectCell">
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_height">100dp</item>
     </style>
 </resources>
