クラス選択画面のレイアウト修正

--- a/app/src/main/res/layout/activity_class_select.xml
+++ b/app/src/main/res/layout/activity_class_select.xml
@@ -7,12 +7,10 @@
         android:layout_height="match_parent">
 
         <TextView
-            style="@style/MessageTextView"
+            style="@style/MessageTextView.TitleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginTop="15dp"
-            android:text="@string/gender_select_text"/>
+            android:text="@string/class_select_text"/>
 
         <RelativeLayout
             android:id="@+id/btn_beginner_class"
@@ -32,6 +30,7 @@
                 android:id="@+id/title_beginner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:text="@string/class_beginner"
                 android:textSize="16sp"
                 android:layout_toRightOf="@id/icon_beginner"
@@ -42,6 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp"
                 android:text="@string/class_beginner_description"
                 android:textSize="12sp"
                 android:layout_below="@+id/title_beginner"
@@ -68,6 +68,7 @@
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
                 android:text="@string/class_professional"
                 android:textSize="16sp"
                 android:layout_toRightOf="@id/icon_professional"
@@ -78,6 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp"
                 android:text="@string/class_professional_description"
                 android:textSize="12sp"
                 android:layout_below="@+id/title"
