--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,6 +14,11 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="MessageTextView.TitleTextView">
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginTop">15dp</item>
+    </style>
+
     <style name="GenderButton">
         <item name="android:layout_width">100dp</item>
         <item name="android:layout_height">100dp</item>
@@ -26,5 +31,7 @@
     <style name="ClassSelectCell">
         <item name="android:layout_marginTop">5dp</item>
         <item name="android:layout_height">100dp</item>
+        <item name="android:background">@drawable/bg_cell_frame</item>
+        <item name="android:padding">3dp</item>
     </style>
 </resources>
